--- a/CameraDemo/CameraDemo/Base.lproj/Main.storyboard
+++ b/CameraDemo/CameraDemo/Base.lproj/Main.storyboard
@@ -42,10 +42,16 @@
                                             <action selector="cameraOkBtnClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="IOg-vV-EVB"/>
                                         </connections>
                                     </button>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="AJ8-3c-isy">
-                                        <rect key="frame" x="0.0" y="8" width="120" height="87"/>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="oVV-gK-g2V">
+                                        <rect key="frame" x="16" y="17" width="100" height="70"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
+                                        <state key="normal">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="preImageBtnClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="OVp-pd-1tK"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -57,7 +63,7 @@
                         <outlet property="cameraOkBtn" destination="hHx-Li-4qj" id="emk-3y-teV"/>
                         <outlet property="cameraView" destination="5zJ-nd-Enj" id="MQn-7W-p80"/>
                         <outlet property="directionBtn" destination="WKn-4P-fbW" id="Egb-Ye-zya"/>
-                        <outlet property="preImageView" destination="AJ8-3c-isy" id="EOr-AU-eBf"/>
+                        <outlet property="preImageBtn" destination="oVV-gK-g2V" id="v5P-nP-FD8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -75,21 +81,31 @@
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="aPz-6z-bpu">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="tcZ-zP-R7k">
-                                    <size key="itemSize" width="50" height="50"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="tcZ-zP-R7k">
+                                    <size key="itemSize" width="90" height="120"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                    <inset key="sectionInset" minX="12" minY="10" maxX="12" maxY="10"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="1GT-KU-I9a">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="AlbumCell" id="1GT-KU-I9a" customClass="AlbumCollectionViewCell">
                                         <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="90" height="120"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="ieA-tT-qFR">
+                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="120"/>
+                                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                                </imageView>
+                                            </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
+                                        <size key="customSize" width="90" height="120"/>
+                                        <connections>
+                                            <outlet property="photoImageView" destination="ieA-tT-qFR" id="JUb-9v-6l6"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
