--- a/CameraDemo/CameraDemo/Base.lproj/Main.storyboard
+++ b/CameraDemo/CameraDemo/Base.lproj/Main.storyboard
@@ -41,16 +41,6 @@
                                 <rect key="frame" x="0.0" y="465" width="320" height="100"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hHx-Li-4qj">
-                                        <rect key="frame" x="137" y="30" width="46" height="46"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <state key="normal" image="cameraBtn">
-                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                        </state>
-                                        <connections>
-                                            <action selector="cameraOkBtnClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="IOg-vV-EVB"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="OZZ-BZ-whi">
                                         <rect key="frame" x="199" y="8" width="53" height="38"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -131,6 +121,23 @@
                                             <action selector="fliterBtnClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="SoB-vV-i07"/>
                                         </connections>
                                     </button>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="UZ3-Qw-HqA">
+                                        <rect key="frame" x="136" y="63" width="51" height="31"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <connections>
+                                            <action selector="doubleBtnClick:" destination="vXZ-lx-hvc" eventType="valueChanged" id="SRG-Q9-Qe8"/>
+                                        </connections>
+                                    </switch>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="hHx-Li-4qj">
+                                        <rect key="frame" x="137" y="8" width="46" height="46"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" image="cameraBtn">
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="cameraOkBtnClick:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="IOg-vV-EVB"/>
+                                        </connections>
+                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -145,6 +152,7 @@
                         <outlet property="cameraOkBtn" destination="hHx-Li-4qj" id="emk-3y-teV"/>
                         <outlet property="cameraView" destination="5zJ-nd-Enj" id="MQn-7W-p80"/>
                         <outlet property="directionBtn" destination="WKn-4P-fbW" id="Egb-Ye-zya"/>
+                        <outlet property="doubleExposureBtn" destination="UZ3-Qw-HqA" id="vYq-DW-t80"/>
                         <outlet property="filterBtn" destination="jgc-n4-24p" id="R3J-K3-vgS"/>
                         <outlet property="flashBtn" destination="KVh-3u-B8d" id="SLm-ay-Dzl"/>
                         <outlet property="frameRateBtnClick" destination="EaG-ck-jDg" id="foY-DD-B3h"/>
